<resources>
    <string name="app_name">Peanuts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_groups">Groups</string>
    <string name="title_explore">Explore</string>
    <string name="title_add">Add</string>
    <string name="allergens">Potential Allergens</string>
    <string name="add_food_title">Name of food</string>
    <string name="title">Title</string>
    <string name="clear_button">Clear</string>
    <string name="save_button">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">log in</string>
    <string name="action_signup">sign up</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="login">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="add_food">Add Food</string>
    <string name="add_new_group">add new group</string>
    <string name="search_hint">search</string>
    <string name="meal_plan">Meal Plan</string>

</resources>