<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/text_explore"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/title_add"
        tools:icon="@color/black" />
    <item
        android:id="@+id/text_group"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_groups" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_profile" />

</menu>