<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.peanuts.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.peanuts.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/text_explore"
        android:name="com.example.peanuts.ui.home.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/text_group"
        android:name="com.example.peanuts.ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.peanuts.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>