<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.add.AddFragment">

    <TextView
        android:id="@+id/text_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/stat_sys_upload"
        app:tint="#009688" />

    <TextView
        android:id="@+id/title"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="190dp"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="210dp"
        android:minHeight="48dp"
        android:text="@string/add_food_title"
        android:textColor="#009688"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/allergens"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="280dp"
        android:text="@string/allergens"
        android:textSize="20sp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="20dp"
        android:text="@string/save_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_button"
        android:textColor="@color/white"
        app:iconTint="@color/white" />


</FrameLayout>